...

  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final router = ref.watch(routerProvider);

    return MaterialApp.router(
      title: 'SC Student',
      theme: buildAppTheme(),
      routerConfig: router,
      scrollBehavior: const _BouncingScrollBehavior(),
      debugShowCheckedModeBanner: false,
      builder: (context, child) {
        // Maintenance mode intercept
...
