appId: com.studycenter.sc_student
---
- launchApp: {clearState: true}
- extendedWaitUntil:
    visible: "Email atau Username"
    timeout: 10000
- tapOn: "Email atau Username"
- eraseText
- inputText: "test@studycenter.test"
- tapOn: "Password"
- eraseText
- inputText: "password123"
- tapOn: 'Password'
- extendedWaitUntil:
    visible: "Login Sekarang"
    timeout: 3000
- tapOn: 'Login Sekarang'
- waitForAnimationToEnd:
    timeout: 12000
- takeScreenshot: login_success_for_offline
- assertVisible: "Beranda"
